fix overflow list view error

--- a/marketplace/src/components/pages/Products/ProductsList/ProductListItem/styles.css
+++ b/marketplace/src/components/pages/Products/ProductsList/ProductListItem/styles.css
@@ -21,16 +21,11 @@
   position: relative;
   display: flex;
   box-shadow: 0 2px 6px rgb(85 85 85 / 20%);
-  overflow: hidden;
 }
 
 .product-img img {
   object-fit: scale-down;
   transition: all 0.3s ease-in-out;
-}
-
-.product-listItem:hover > .product-img img {
-  transform: scale(1.15);
 }
 
 .product-action {
